# library-system

./: Makefile  README.md  library-system.code-workspace
backend/: makefile  pyproject.toml
backend/app/: app.py  main.py
backend/app/domain/entities/: book.py
backend/app/domain/models/book/: __init__.py  book.py
backend/app/domain/models/user/: __init__.py  user.py
backend/app/domain/repositories/: book.py
backend/app/domain/services/: book.py  user.py
backend/app/infrastructures/database/: __init__.py  connection.py  database.py  models.py
backend/app/infrastructures/db/: connection.py  models.py
backend/app/infrastructures/repositories/: book.py
backend/app/presentation/: dependencies.py
backend/app/presentation/controllers/: book_controller.py  user_controller.py
backend/app/presentation/schemas/: book.py  user.py
backend/app/usecase/: book.py  user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BookForm.jsx  BookList.jsx  LoginForm.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminPage.jsx  HomePage.jsx  LoginPage.jsx
