[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]
