[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "injector>=0.22.0",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 119
target-version = "py310"
exclude = ["__pycache__", ".git", ".mypy_cache", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # custom
  "EM101",
  "EM102",
  "S104",
  "S105",
  "TRY003",
  "ARG001",
  "PLR0913",

  # default
  "PTH",
  "D",
  "T201",   # print書かない
  "ISC001",
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "RET504", # unnecessary-assign
  "INP001", # __init__.pyなし
  "ERA001", # commented-out-code
  "ANN401", # any-type
  "FIX002", # line-contains-todo
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "BLE001", # Do not catch blind exception: `Exception`
  "TRY201", # Use `raise` without specifying exception name
  "PYI034", # 非自己復帰型 Self
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
  "S101",    # assertを許す
  "PLR2004", # magic-value-comparison
  "TC001",   # typing-only-first-party-import
  "PT011",   # pytest-raises-too-broad
  "SLF001",  # Private member accessed
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.mypy]
ignore_missing_imports = true
# follow_imports = normal
disallow_any_unimported = false
disallow_any_expr = false       # 式でのAny禁止
disallow_any_decorated = false
disallow_any_explicit = false   # 変数でAny禁止
disallow_any_generics = true    # ジェネリックで書かないの禁止
disallow_subclassing_any = true # Anyのサブクラス禁止

disallow_untyped_calls = true      # 型なし関数呼び出し禁止 `a: int = f()`
disallow_untyped_defs = true       # 型なし関数定義禁止 `def f(a: int) -> int`
disallow_incomplete_defs = true    # 一部の型定義を禁止 `def f(a: int, b)`
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true     # 辿りつかないコードの検出
allow_redefinition = true   # 変数の再定義を禁止

show_error_context = true
show_column_numbers = true
